--- a/create-react-express/package.json
+++ b/create-react-express/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.3.1"
   }
 }
